Add detail activity (classes, layouts, activity starting...). Now detail screen shows title and poster only.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="pref_sortorder_label">Sorting order</string>
     <string name="pref_sortorder_label_popular">Most popular first</string>
     <string name="pref_sortorder_label_rating">Highest rating first</string>
+    <string name="title_activity_detail">Movie Info</string>
     <!-- Strings related to Settings -->
 
 </resources>
