--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="pref_sortorder_rating" translatable="false">top_rated</string>
     <string name="pref_sortorder_key" translatable="false">sortorder</string>
     <string name="pref_sortorder_label">Sorting order</string>
-    <string name="pref_sortorder_label_popular">Most popular first</string>
-    <string name="pref_sortorder_label_rating">Highest rating first</string>
+    <string name="pref_sortorder_label_popular">By popularity</string>
+    <string name="pref_sortorder_label_rating">By rating</string>
     <string name="title_activity_detail">Movie Info</string>
     <!-- Strings related to Settings -->
 
