--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">MovieDB</string>
+    <string name="title_activity_detail">Movie details</string>
+
+    <!-- Strings related to Settings -->
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
     <string name="pref_sortorder_popular" translatable="false">popular</string>
@@ -9,7 +12,5 @@
     <string name="pref_sortorder_label">Sorting order</string>
     <string name="pref_sortorder_label_popular">By popularity</string>
     <string name="pref_sortorder_label_rating">By rating</string>
-    <string name="title_activity_detail">Movie Info</string>
-    <!-- Strings related to Settings -->
 
 </resources>
