--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="base_potser_url" translatable="false">base_poster_url</string>
     <string name="base_potser_secure_url" translatable="false">base_poster_secure_url</string>
 
+    <!-- Strings for identify transforms -->
+    <string name="poster_image" translatable="false">poster_image</string>
 </resources>
