--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <!-- Strings related to Settings -->
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
+    <string name="action_favorite">Favorite</string>
     <string name="title_activity_settings">Settings</string>
     <string name="pref_sortorder_popular" translatable="false">popular</string>
     <string name="pref_sortorder_default" translatable="false">popular</string>
@@ -24,4 +25,5 @@
 
     <!-- Strings for identify transforms -->
     <string name="poster_image" translatable="false">poster_image</string>
+
 </resources>
