--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="runtime_minutes_text">min</string>
     <string name="videos_list_title">Trailers:</string>
     <string name="reviews_list_title">Reviews:</string>
+
+    <string name="title_activity_full_poster">FullPosterActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
