--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,6 @@
     <string name="videos_list_title">Trailers:</string>
     <string name="reviews_list_title">Reviews:</string>
 
-    <string name="title_activity_full_poster">FullPosterActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_full_poster">Poster</string>
+    <string name="action_share">Share</string>
 </resources>
