--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,13 @@
     <string name="app_name">Popular Movies</string>
     <string name="title_activity_detail">Movie details</string>
     <string name="content_authority">com.example.leshik.moviedb</string>
-
-    <!-- Strings related to Settings -->
-    <string name="action_refresh">Refresh</string>
+    <!-- Strings related to menu actions -->
+    <string name="action_refresh_list">Refresh list</string>
+    <string name="action_refresh_movie">Refresh movie</string>
     <string name="action_settings">Settings</string>
     <string name="action_favorite">Favorite</string>
+    <string name="action_share">Share</string>
+    <!-- Strings related to Settings -->
     <string name="title_activity_settings">Settings</string>
     <string name="pref_sortorder_popular" translatable="false">popular</string>
     <string name="pref_sortorder_default" translatable="false">popular</string>
@@ -37,5 +39,5 @@
     <string name="reviews_list_title">Reviews:</string>
 
     <string name="title_activity_full_poster">Poster</string>
-    <string name="action_share">Share</string>
+
 </resources>
