--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,12 +25,12 @@
     <string name="pref_cache_4h" translatable="false">4</string>
     <string name="pref_cache_12h" translatable="false">12</string>
     <string name="pref_cache_24h" translatable="false">24</string>
-    <string name="pref_cache_default" translatable="false">@string/pref_cache_24h</string>
+    <string name="pref_cache_default" translatable="false">@string/pref_cache_never</string>
     <string name="pref_cache_key" translatable="false">cache_expire</string>
     <string name="pref_cache_label">Cache update interval</string>
     <string name="pref_cache_label_never">Never</string>
     <string name="pref_cache_label_1h">1 hour</string>
-    <string name="pref_cache_label_4h">24 hours</string>
+    <string name="pref_cache_label_4h">4 hours</string>
     <string name="pref_cache_label_12h">12 hours</string>
     <string name="pref_cache_label_24h">1 day</string>
 
