--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,6 @@
 
     <!-- Strings related to details view -->
     <string name="runtime_minutes_text">min</string>
-    <string name="videos_list_title">Trailers:</string>
-    <string name="reviews_list_title">Reviews:</string>
+    <string name="videos_list_title">Trailers</string>
+    <string name="reviews_list_title">Reviews</string>
 </resources>
