--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="runtime_minutes_text">min</string>
     <string name="videos_list_title">Trailers</string>
     <string name="reviews_list_title">Reviews</string>
+    <string name="share_action_subject">Popular movies:</string>
 </resources>
