Change message displaying method to Toast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="homepage_format_str">Homepage: %s</string>
 
     <!-- Events messages -->
-    <string name="event_message_refreshing">Refreshing</string>
+    <string name="event_message_refreshing">Refreshing...</string>
     <string name="event_message_network_down">Network is unavailable</string>
     <string name="event_message_network_up">Network is available</string>
 </resources>
