--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Popular Movies</string>
-    <string name="content_authority">com.example.leshik.moviedb</string>
+    <string name="content_authority" translatable="false">com.example.leshik.moviedb</string>
     <string name="title_activity_detail">Movie details</string>
     <string name="title_activity_settings">Settings</string>
     <!-- Strings related to menu actions -->
